# Agent-Trader

./: .env.example  .gitignore  CLAUDE.md  README.md  SYSTEM_FLOW.md  install_service.ps1  pyproject.toml  run_dashboard.ps1  run_supervisor.ps1  run_watchdog.ps1  start_trio.ps1  system-flow.excalidraw
.claude/: settings.local.json
goldtrader/: __init__.py  cli.py  config.py  logging_setup.py  types.py
goldtrader/backtest/: __init__.py  allocation.py  broker.py  daily_regime.py  data.py  dukascopy_import.py  engine.py  macro_regime.py  meanrev.py  seasonal.py  stats.py  tsmom.py  walkforward.py
goldtrader/dashboard/: __init__.py  __main__.py  controls.py  readers.py  server.py  settings_io.py
goldtrader/feeds/: __init__.py  calendar.py  cot.py  macro.py  news.py
scripts/: exp_allocation.py  exp_ensemble.py  exp_macro_regime.py  exp_meanrev.py  exp_seasonal.py  exp_triggers.py  exp_tsmom.py  forward_test.py  gen_flowchart.py
tests/: conftest.py  test_allocation.py  test_backtest.py  test_bias.py  test_circuit_breaker.py  test_cot.py  test_daily_regime.py  test_dashboard_readers.py  test_decision.py  test_dukascopy_import.py  test_exits.py  test_feeds.py  test_indicators.py  test_macro_regime.py  test_meanrev.py  test_overlays.py  test_parser.py  test_prompt_cache.py  test_reconcile.py  test_reflection.py  test_risk_pyramid.py  test_risk_sizing.py  test_safety_gates.py  test_seasonal.py  test_seasonal_bias.py  test_settings_io.py  test_state_and_guards.py  test_technical.py  test_triggers.py  test_tsmom.py  test_walkforward.py  test_watchdog_guards.py
(+25 files in other folders)
