[project]
name = "goldtrader"
version = "0.1.0"
description = "Autonomous, self-healing, learning Gold (XAUUSD) trading pipeline wrapping TradingAgents -> MetaTrader 5"
requires-python = ">=3.13,<3.14"
dependencies = [
    "MetaTrader5>=5.0.45",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # TradingAgents is installed separately from GitHub:
    #   pip install "git+https://github.com/TauricResearch/TradingAgents.git"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Backtest lab only (lazily imported). Free multi-year XAU/USD history; no live-trading need.
backtest = ["dukascopy-python>=4.0"]

[project.scripts]
goldtrader = "goldtrader.supervisor.loop:main"
goldtrader-watchdog = "goldtrader.healing.watchdog:main"
goldtrader-dashboard = "goldtrader.dashboard.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["goldtrader*"]

[tool.setuptools.package-data]
"goldtrader.dashboard" = ["static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
